src/Bluetooth/Raw/HciLib.hs


{-# LINE 106 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_set_scan_parameters" c'hci_le_set_scan_parameters
  :: CInt -> CUChar -> CUShort -> CUShort -> CUChar -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_le_set_scan_parameters" p'hci_le_set_scan_parameters
  :: FunPtr (CInt -> CUChar -> CUShort -> CUShort -> CUChar -> CUChar -> CInt -> IO CInt)

{-# LINE 107 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_set_advertise_enable" c'hci_le_set_advertise_enable
  :: CInt -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_le_set_advertise_enable" p'hci_le_set_advertise_enable
  :: FunPtr (CInt -> CUChar -> CInt -> IO CInt)

{-# LINE 108 "src/Bluetooth/Raw/HciLib.hsc" #-}
{- #ccall hci_le_create_conn , CInt -> CUShort -> CUShort -> CUChar -> CUChar -> <bdaddr_t> -> CUChar -> CUShort -> CUShort -> CUShort -> CUShort -> CUShort -> CUShort -> Ptr CUShort -> CInt -> IO CInt -}
foreign import ccall "hci_le_conn_update" c'hci_le_conn_update
  :: CInt -> CUShort -> CUShort -> CUShort -> CUShort -> CUShort -> CInt -> IO CInt
foreign import ccall "&hci_le_conn_update" p'hci_le_conn_update
  :: FunPtr (CInt -> CUShort -> CUShort -> CUShort -> CUShort -> CUShort -> CInt -> IO CInt)

{-# LINE 110 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_add_white_list" c'hci_le_add_white_list
  :: CInt -> Ptr C'bdaddr_t -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_le_add_white_list" p'hci_le_add_white_list
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> CUChar -> CInt -> IO CInt)

{-# LINE 111 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_rm_white_list" c'hci_le_rm_white_list
  :: CInt -> Ptr C'bdaddr_t -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_le_rm_white_list" p'hci_le_rm_white_list
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> CUChar -> CInt -> IO CInt)

{-# LINE 112 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_read_white_list_size" c'hci_le_read_white_list_size
  :: CInt -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_le_read_white_list_size" p'hci_le_read_white_list_size
  :: FunPtr (CInt -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 113 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_clear_white_list" c'hci_le_clear_white_list
  :: CInt -> CInt -> IO CInt
foreign import ccall "&hci_le_clear_white_list" p'hci_le_clear_white_list
  :: FunPtr (CInt -> CInt -> IO CInt)

{-# LINE 114 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_add_resolving_list" c'hci_le_add_resolving_list
  :: CInt -> Ptr C'bdaddr_t -> CUChar -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_le_add_resolving_list" p'hci_le_add_resolving_list
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> CUChar -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 115 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_rm_resolving_list" c'hci_le_rm_resolving_list
  :: CInt -> Ptr C'bdaddr_t -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_le_rm_resolving_list" p'hci_le_rm_resolving_list
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> CUChar -> CInt -> IO CInt)

{-# LINE 116 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_clear_resolving_list" c'hci_le_clear_resolving_list
  :: CInt -> CInt -> IO CInt
foreign import ccall "&hci_le_clear_resolving_list" p'hci_le_clear_resolving_list
  :: FunPtr (CInt -> CInt -> IO CInt)

{-# LINE 117 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_read_resolving_list_size" c'hci_le_read_resolving_list_size
  :: CInt -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_le_read_resolving_list_size" p'hci_le_read_resolving_list_size
  :: FunPtr (CInt -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 118 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_set_address_resolution_enable" c'hci_le_set_address_resolution_enable
  :: CInt -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_le_set_address_resolution_enable" p'hci_le_set_address_resolution_enable
  :: FunPtr (CInt -> CUChar -> CInt -> IO CInt)

{-# LINE 119 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_read_remote_features" c'hci_le_read_remote_features
  :: CInt -> CUShort -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_le_read_remote_features" p'hci_le_read_remote_features
  :: FunPtr (CInt -> CUShort -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 120 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_for_each_dev" c'hci_for_each_dev
  :: CInt -> FunPtr (CInt -> CInt -> CLong -> CInt) -> CLong -> IO CInt
foreign import ccall "&hci_for_each_dev" p'hci_for_each_dev
  :: FunPtr (CInt -> FunPtr (CInt -> CInt -> CLong -> CInt) -> CLong -> IO CInt)

{-# LINE 121 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_get_route" c'hci_get_route
  :: Ptr C'bdaddr_t -> IO CInt
foreign import ccall "&hci_get_route" p'hci_get_route
  :: FunPtr (Ptr C'bdaddr_t -> IO CInt)

{-# LINE 122 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_bustostr" c'hci_bustostr
  :: CInt -> IO CString
foreign import ccall "&hci_bustostr" p'hci_bustostr
  :: FunPtr (CInt -> IO CString)

{-# LINE 123 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_typetostr" c'hci_typetostr
  :: CInt -> IO CString
foreign import ccall "&hci_typetostr" p'hci_typetostr
  :: FunPtr (CInt -> IO CString)

{-# LINE 124 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_dtypetostr" c'hci_dtypetostr
  :: CInt -> IO CString
foreign import ccall "&hci_dtypetostr" p'hci_dtypetostr
  :: FunPtr (CInt -> IO CString)

{-# LINE 125 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_dflagstostr" c'hci_dflagstostr
  :: CUInt -> IO CString
foreign import ccall "&hci_dflagstostr" p'hci_dflagstostr
  :: FunPtr (CUInt -> IO CString)

{-# LINE 126 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_ptypetostr" c'hci_ptypetostr
  :: CUInt -> IO CString
foreign import ccall "&hci_ptypetostr" p'hci_ptypetostr
  :: FunPtr (CUInt -> IO CString)

{-# LINE 127 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_strtoptype" c'hci_strtoptype
  :: CString -> Ptr CUInt -> IO CInt
foreign import ccall "&hci_strtoptype" p'hci_strtoptype
  :: FunPtr (CString -> Ptr CUInt -> IO CInt)

{-# LINE 128 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_scoptypetostr" c'hci_scoptypetostr
  :: CUInt -> IO CString
foreign import ccall "&hci_scoptypetostr" p'hci_scoptypetostr
  :: FunPtr (CUInt -> IO CString)

{-# LINE 129 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_strtoscoptype" c'hci_strtoscoptype
  :: CString -> Ptr CUInt -> IO CInt
foreign import ccall "&hci_strtoscoptype" p'hci_strtoscoptype
  :: FunPtr (CString -> Ptr CUInt -> IO CInt)

{-# LINE 130 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_lptostr" c'hci_lptostr
  :: CUInt -> IO CString
foreign import ccall "&hci_lptostr" p'hci_lptostr
  :: FunPtr (CUInt -> IO CString)

{-# LINE 131 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_strtolp" c'hci_strtolp
  :: CString -> Ptr CUInt -> IO CInt
foreign import ccall "&hci_strtolp" p'hci_strtolp
  :: FunPtr (CString -> Ptr CUInt -> IO CInt)

{-# LINE 132 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_lmtostr" c'hci_lmtostr
  :: CUInt -> IO CString
foreign import ccall "&hci_lmtostr" p'hci_lmtostr
  :: FunPtr (CUInt -> IO CString)

{-# LINE 133 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_strtolm" c'hci_strtolm
  :: CString -> Ptr CUInt -> IO CInt
foreign import ccall "&hci_strtolm" p'hci_strtolm
  :: FunPtr (CString -> Ptr CUInt -> IO CInt)

{-# LINE 134 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_cmdtostr" c'hci_cmdtostr
  :: CUInt -> IO CString
foreign import ccall "&hci_cmdtostr" p'hci_cmdtostr
  :: FunPtr (CUInt -> IO CString)

{-# LINE 135 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_commandstostr" c'hci_commandstostr
  :: Ptr CUChar -> CString -> CInt -> IO CString
foreign import ccall "&hci_commandstostr" p'hci_commandstostr
  :: FunPtr (Ptr CUChar -> CString -> CInt -> IO CString)

{-# LINE 136 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_vertostr" c'hci_vertostr
  :: CUInt -> IO CString
foreign import ccall "&hci_vertostr" p'hci_vertostr
  :: FunPtr (CUInt -> IO CString)

{-# LINE 137 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_strtover" c'hci_strtover
  :: CString -> Ptr CUInt -> IO CInt
foreign import ccall "&hci_strtover" p'hci_strtover
  :: FunPtr (CString -> Ptr CUInt -> IO CInt)

{-# LINE 138 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "lmp_vertostr" c'lmp_vertostr
  :: CUInt -> IO CString
foreign import ccall "&lmp_vertostr" p'lmp_vertostr
  :: FunPtr (CUInt -> IO CString)

{-# LINE 139 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "lmp_strtover" c'lmp_strtover
  :: CString -> Ptr CUInt -> IO CInt
foreign import ccall "&lmp_strtover" p'lmp_strtover
  :: FunPtr (CString -> Ptr CUInt -> IO CInt)

{-# LINE 140 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "pal_vertostr" c'pal_vertostr
  :: CUInt -> IO CString
foreign import ccall "&pal_vertostr" p'pal_vertostr
  :: FunPtr (CUInt -> IO CString)

{-# LINE 141 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "pal_strtover" c'pal_strtover
  :: CString -> Ptr CUInt -> IO CInt
foreign import ccall "&pal_strtover" p'pal_strtover
  :: FunPtr (CString -> Ptr CUInt -> IO CInt)

{-# LINE 142 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "lmp_featurestostr" c'lmp_featurestostr
  :: Ptr CUChar -> CString -> CInt -> IO CString
foreign import ccall "&lmp_featurestostr" p'lmp_featurestostr
  :: FunPtr (Ptr CUChar -> CString -> CInt -> IO CString)

{-# LINE 143 "src/Bluetooth/Raw/HciLib.hsc" #-}
{- #cinline hci_set_bit , CInt -> Ptr () -> IO () -}
{- #cinline hci_clear_bit , CInt -> Ptr () -> IO () -}
{- #cinline hci_test_bit , CInt -> Ptr () -> IO CInt -}
{- #cinline hci_filter_clear , Ptr <struct hci_filter> -> IO () -}
{- #cinline hci_filter_set_ptype , CInt -> Ptr <struct hci_filter> -> IO () -}
{- #cinline hci_filter_clear_ptype , CInt -> Ptr <struct hci_filter> -> IO () -}
{- #cinline hci_filter_test_ptype , CInt -> Ptr <struct hci_filter> -> IO CInt -}
{- #cinline hci_filter_all_ptypes , Ptr <struct hci_filter> -> IO () -}
{- #cinline hci_filter_set_event , CInt -> Ptr <struct hci_filter> -> IO () -}
{- #cinline hci_filter_clear_event , CInt -> Ptr <struct hci_filter> -> IO () -}
{- #cinline hci_filter_test_event , CInt -> Ptr <struct hci_filter> -> IO CInt -}
{- #cinline hci_filter_all_events , Ptr <struct hci_filter> -> IO () -}
{- #cinline hci_filter_set_opcode , CInt -> Ptr <struct hci_filter> -> IO () -}
{- #cinline hci_filter_clear_opcode , Ptr <struct hci_filter> -> IO () -}
{- #cinline hci_filter_test_opcode , CInt -> Ptr <struct hci_filter> -> IO CInt -}
